--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,20 +1,22 @@
 <div class="item">
-  <label>
-    <input type="checkbox" (change)="item.done = !item.done" [checked]="item.done"/>{{item.description}}
-  </label>
+
+  <!-- <input id="done-check" type="checkbox" (change)="item.done = !item.done" [checked]="item.done" />
+  <label for="done-check">{{item.description}}</label> -->
+  <input id="{{item.description}}" type="checkbox" (change)="item.done = !item.done" [checked]="item.done" />
+  <label for="{{item.description}}">{{item.description}}</label>
 
   <div class="btn-wrapper" *ngIf="!editable">
-    <button (click)="editable = !editable">Edit</button>
-    <button color="warn" (click)="remove.emit()">Delete</button>
+    <button class="btn" (click)="editable = !editable">Edit</button>
+    <button class="btn btn-warn" (click)="remove.emit()">Delete</button>
   </div>
 
   <!-- This section shows only if user clicks Edit button -->
   <div *ngIf="editable">
-    <input placeholder="edit item" #editedItem (keyup.enter)="saveItem(editedItem.value)">
+    <input class="sm-text-input" placeholder="edit {{item.description}}" #editedItem (keyup.enter)="saveItem(editedItem.value)">
 
     <div class="btn-wrapper">
-      <button (click)="saveItem(editedItem.value)" color="primary">Save</button>
-      <button (click)="editable = !editable">Cancel</button>
+      <button class="btn" (click)="editable = !editable">Cancel</button>
+      <button class="btn btn-save" (click)="saveItem(editedItem.value)">Save</button>
     </div>
 	</div>
 </div>
