--- a/src/app/item/item.component.scss
+++ b/src/app/item/item.component.scss
@@ -5,45 +5,104 @@
 }
 
 .btn-wrapper {
+  margin-top: 1rem;
   margin-bottom: .5rem;
 }
 
-button {
-  width: 40%;
-  font-size: 1.2rem;
+.btn {
 
   // menu buttons flexbox styles
   flex-basis: 49%;
+}
 
+.btn-save {
+  background-color: #000;
+  color: #fff;
+  border-color: #000;
+  &:hover {
+    color: #c4e8ff;
+  }
 }
 
 .checkbox-wrapper {
   margin: .5rem 0;
 }
 
-// for non-material design version
-// .sm-text-input {
-//   width: 100%;
-//   padding: 1rem;
-//   border: 2px solid #555;
-//   display: block;
-//   box-sizing: border-box;
-//   font-size: 1rem;
-//   margin: 1rem 0;
-// }
+.btn-warn {
+  background-color: red;
+  color: #fff;
+  border-color: darken(red, 5%);
 
-.mat-form-field-label  {
-  font-size: 1rem;
-  text-align: left;
-}
-
-.sm-label {
-  font-size: .9rem;
-
-  // media query to make font larger at 600px viewport
-  @media (min-width: 600px) {
-    font-size: 1.25rem;
+  &:hover {
+    background-color: darken(red, 5%);
   }
-
+  &:active {
+    background-color: darken(red, 20%);
+  }
 }
+
+.sm-text-input {
+  width: 100%;
+  padding: .5rem;
+  border: 2px solid #555;
+  display: block;
+  box-sizing: border-box;
+  font-size: 1rem;
+  margin: 1rem 0;
+}
+
+// Custom checkboxes
+
+/* Base for label styling */
+[type="checkbox"]:not(:checked),
+[type="checkbox"]:checked {
+  position: absolute;
+  left: -9999px;
+}
+[type="checkbox"]:not(:checked) + label,
+[type="checkbox"]:checked + label {
+  position: relative;
+  padding-left: 1.95em;
+  cursor: pointer;
+}
+
+/* checkbox aspect */
+[type="checkbox"]:not(:checked) + label:before,
+[type="checkbox"]:checked + label:before {
+  content: '';
+  position: absolute;
+  left: 0; top: 0;
+  width: 1.25em; height: 1.25em;
+  border: 2px solid #ccc;
+  background: #fff;
+}
+
+/* checked mark aspect */
+[type="checkbox"]:not(:checked) + label:after,
+[type="checkbox"]:checked + label:after {
+  content: '\2713\0020';
+  position: absolute;
+  top: .15em; left: .22em;
+  font-size: 1.3em;
+  line-height: 0.8;
+  color: #0d8dee;
+  transition: all .2s;
+  font-family: 'Lucida Sans Unicode', 'Arial Unicode MS', Arial;
+}
+/* checked mark aspect changes */
+[type="checkbox"]:not(:checked) + label:after {
+  opacity: 0;
+  transform: scale(0);
+}
+[type="checkbox"]:checked + label:after {
+  opacity: 1;
+  transform: scale(1);
+}
+
+/* accessibility */
+[type="checkbox"]:checked:focus + label:before,
+[type="checkbox"]:not(:checked):focus + label:before {
+  border: 2px dotted blue;
+}
+
 
