--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,5 @@
-mat-form-field {
-  width: 100%;
-}
-
-.mat-form-field-infix input {
-  font-size: 1.25rem;
+body {
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 .btn-wrapper {
@@ -11,4 +7,45 @@ mat-form-field {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
+}
+
+.btn {
+  color: #000;
+  background-color: #fff;
+  border: 2px solid #cecece;
+  padding: .35rem 1rem .25rem 1rem;
+  font-size: 1rem;
+
+  &:hover {
+    background-color: #ecf2fd;
+  }
+
+  &:active {
+    background-color: #d1e0fe;
+  }
+
+  &:focus {
+    outline: none;
+    border: black solid 2px;
+  }
+}
+
+
+.btn-primary {
+  color: #fff;
+  background-color: #000;
+  width: 100%;
+  padding: .75rem;
+  font-size: 1.3rem;
+  border: black solid 2px;
+  margin: 1rem 0;
+
+  &:hover {
+    color: #c4e8ff;
+  }
+
+  &:focus {
+    outline: none;
+    border: #878787 solid 2px;
+  }
 }
