cite custom checkbox styles source

--- a/src/app/item/item.component.scss
+++ b/src/app/item/item.component.scss
@@ -52,6 +52,7 @@
 }
 
 // Custom checkboxes
+//  Adapted from https://css-tricks.com/the-checkbox-hack/#custom-designed-radio-buttons-and-checkboxes
 
 /* Base for label styling */
 [type="checkbox"]:not(:checked),
